tests/e2e/semantics/service_block_output_invalid.error
Error: syntax error in story at line 4, column 9

4|            a = b
              ^^^^^

E0100: Can't assign `Object` to `int`
